--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,10 @@
 tail: True
 log: False
 
-mongo:
-    host: localhost
-    port: 27017
-    database: collars
+# mongo:
+#     host: localhost
+#     port: 27017
+#     database: collars
+
+server:
+  port: 8000
